--- a/app/src/App.css
+++ b/app/src/App.css
@@ -32,7 +32,46 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #ccc;
+}
+
+.column {
+  flex-basis: 33.33%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin: 20px;
+}
+
+.vertical-line {
+  border-left: 1px solid black;
+  padding: 10px;
+  box-sizing: border-box;
+  height: 100vh;
+}
+
+.answer-section {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 20px;
+  width: 400px;
+  overflow-wrap: break-word;
+}
+
+.answer-text {
+  white-space: pre-wrap;
 }
