--- a/app/src/App.css
+++ b/app/src/App.css
@@ -83,12 +83,10 @@ h1 {
 
 .answer-section {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 0 20px 20px;
   border-radius: 5px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 0 20px;
   width: 400px;
-  overflow-wrap: break-word;
 }
 
 .answer-text {
