--- a/app/src/App.css
+++ b/app/src/App.css
@@ -75,20 +75,38 @@ h1 {
 }
 
 .vertical-line {
-  border-left: 1px solid black;
+  border-left: 3px solid #bacfdc;
   padding: 10px;
-  box-sizing: border-box;
   height: 100vh;
+  margin-left: 10px;
 }
 
 .answer-section {
   border: 1px solid #ccc;
   padding: 0 20px 20px;
   border-radius: 5px;
-  margin: 0 20px;
-  width: 400px;
+  margin: auto;
+  width: 90%;
+  height: max-content;
 }
 
 .answer-text {
   white-space: pre-wrap;
+}
+
+.delete-button {
+  background-color: transparent;
+  margin-right: 3px;
+  width: 1em;
+  height: 1em;
+  border: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.delete-button:hover {
+  color: rgb(250, 72, 72);
+
 }
