--- a/app/src/App.css
+++ b/app/src/App.css
@@ -32,7 +32,93 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.hr .container {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #ccc;
+}
+
+.hr-style {
+  margin-bottom: 0px;
+  border-color: rgba(49, 47, 47, 0.345);
+  border: 1px solid;
+}
+
+
+
+.column {
+  flex-basis: 33.3%;
+  padding: 0px;
+  box-sizing: border-box;
+  margin: 0px;
+
+}
+
+.column-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  background-color: #f2f2f2;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+  /* margin-top: 5px; */
+}
+
+.column-header h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.vertical-line {
+  border-left: 2px solid rgba(49, 47, 47, 0.345);
+  height: 100vh;
+}
+
+.answer-section {
+  border: 1px solid #ccc;
+  padding: 0 20px 20px;
+  border-radius: 5px;
+  margin: auto;
+  width: 85%;
+  min-height: 300px;
+  max-height: 525px;
+  overflow: auto;
+}
+
+.answer-text {
+  white-space: pre-wrap;
+}
+
+.delete-button {
+  background-color: transparent;
+  margin-right: 3px;
+  width: 1em;
+  height: 1em;
+  border: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.delete-button:hover {
+  color: rgb(250, 72, 72);
+
 }
